--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -181,3 +181,21 @@ footer {
 .footer-hr {
     margin-top: 50px;
 }
+
+hr.style18 {
+    height: 20px;
+    border-style: solid;
+    border-color: #8c8b8b;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+hr.style18:before {
+    display: block;
+    content: "";
+    height: 20px;
+    margin-top: -21px;
+    border-style: solid;
+    border-color: #8c8b8b;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
+}
