--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -210,3 +210,9 @@ hr.style18:before {
 .actionLinks a, a:hover, a:visited, a:link, a:active {
     text-decoration: none;
 }
+
+.sodelujoci {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.4
+}
